모드 관련 수정

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
 				margin-bottom: 25px;
 			}
 
+			#intro .intro-person {
+				display: inline-block;
+				width: 50%;
+			}
+
 			#intro .intro-person .intro-header {
 				text-align: center;
 			}
@@ -268,8 +273,7 @@
 						   악기를 다루고 노래 하는 것을 좋아합니다. 걷는 것을 좋아해 약 1000km 도보여행도 하였지만 아직 진혁이와 걷고싶은 길이 많습니다.</p>
   						<p>저에게 진혁이는 잘 맞는 청바지처럼 편안한 사람입니다. 앞으로 살아가면서 함께 나눌 이야기들이 기다려집니다.</p>
 					</div>
-				</div>
-				<div class="intro-person">
+				</div><div class="intro-person">
 					<div class="intro-header">
 						<h3 class="intro-parent-name">김병기·이미호의 아들</h4>
 						<img class="intro-face" src="images/jh-solo.jpg">
